# mai_oop_labs

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md  main.cpp  solution.cpp  tests.cpp
lab2/: CMakeLists.txt  README.md  money.cpp  money.h  tests.cpp
lab3/: CMakeLists.txt  README.md  Rhombus.cpp  Rhombus.h  Trapezoid.cpp  Trapezoid.h  figure.cpp  figure.h  main.cpp  run_val.sh  tests.cpp
lab3/input/: Array.h  Figure.h  Pentagon.h  Rhombus.h  Trapezoid.h
lab3/scr/: Array.cpp  Figure.cpp  Pentagon.cpp  Rhombus.cpp  Trapezoid.cpp
lab4/: Array.h  CMakeLists.txt  Figure.h  Functions.h  Pentagon.h  README.md  Rhombus.h  Trapezoid.h  main.cpp  run.sh  tests.cpp
lab5/: CMakeLists.txt  README.md  allocator.h  main.cpp  run.sh  stack.h  test.cpp  tests.cpp
lab6/: CMakeLists.txt  README.md  main.cpp
lab6/input/: dragon.h  knight.h  npc.h  observer.h  princess.h
lab6/src/: dragon.cpp  knight.cpp  npc.cpp  observer.cpp  princess.cpp
lab7/: CMakeLists.txt  README.md  main.cpp  tests.cpp
lab7/input/: princess.hpp
lab7/src/: dragon.cpp  knight.cpp  princess.cpp
